--- a/Automated Log/env.example
+++ b/Automated Log/env.example
@@ -36,4 +36,7 @@ ELASTIC_PORT=9200
 ELASTIC_INDEX_PATTERN=winlogbeat-*
 SYSLOGS_INTERVAL_MINUTES=20
 
+# Google Drive
+GDRIVE_FOLDER_NAME=Mitre-Dataset-Monitoring
+
 
