--- a/attac-scenarios/frontend/package.json
+++ b/attac-scenarios/frontend/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "start \"\" \"app.exe\" && vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "app": "start \"\" \"app.exe\""
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
